--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <DOCTYPE: html>
-<link rel = "stylesheet" type = "text/css" href = "styles.css">
+<link rel = "stylesheet" type = "text/css" href = "style.css">
 	<head>
 		<title>Pinguin</title>
 	</head>
 	<body>
-		<div id="tittle"></div>
+		<div id="title"></div>
 			<div class="penguin1"></div>
 			<div class="penguin2"></div>
 			<div class="penguin3"></div>
@@ -13,6 +13,6 @@
 			<div class="penguin6"></div>
 			<div class="penguin7"></div>
 			<div class="penguin8"></div>
-			<div clss="yeti"></div>
+			<div class="yeti"></div>
 		</div>
 	</body>	
